--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.1",
     "electron": "^5.0.0",
     "electron-builder": "^20.39.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1"
   },
   "dependencies": {
+    "leaflet": "^1.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
