--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reactron",
   "version": "1.0.0",
   "description": "Electron (React + Webpack)",
-  "main": "main/main.js",
+  "main": "dist/main.js",
   "scripts": {
     "start": "electron .",
     "package": "electron-builder",
