--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "css-loader": "^2.1.1",
     "electron": "^5.0.0",
     "electron-builder": "^20.39.0",
+    "file-loader": "^3.0.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1"
